@@ -34,6 +34,9 @@ lintian (2.5.5) UNRELEASED; urgency=low
   * lib/Lintian/Collect/Source.pm:
     + [NT] Removed assumption that source packages always have a
       format field.
+  * lib/Lintian/Lab.pm:
+    + [NT] Added "is_temp" method to identify temp labs from static
+      labs.
   * lib/Lintian/Processable/Package.pm:
     + [NT] Use part of the file name as package name if the mandatory
       "Package" or "Source" fields are missing rather than choking.
